Fix version of depends.

--- a/packages/@markuplint/html-parser/package.json
+++ b/packages/@markuplint/html-parser/package.json
@@ -20,8 +20,8 @@
 		"@types/parse5": "^6.0.2"
 	},
 	"dependencies": {
-		"@markuplint/ml-ast": "^2.0.0-dev.20211115.0",
-		"@markuplint/parser-utils": "^2.0.0-dev.20211115.0",
+		"@markuplint/ml-ast": "2.0.0-dev.20211115.0",
+		"@markuplint/parser-utils": "2.0.0-dev.20211115.0",
 		"parse5": "^6.0.1",
 		"tslib": "^2.3.1"
 	}
