--- a/packages/@markuplint/html-spec/package.json
+++ b/packages/@markuplint/html-spec/package.json
@@ -24,6 +24,6 @@
 		"node-fetch": "2"
 	},
 	"dependencies": {
-		"@markuplint/ml-spec": "^2.0.0-dev.20211115.0"
+		"@markuplint/ml-spec": "2.0.0-dev.20211115.0"
 	}
 }
