--- a/packages/@markuplint/create-rule-helper/package.json
+++ b/packages/@markuplint/create-rule-helper/package.json
@@ -17,7 +17,7 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/ml-core": "^2.0.0-dev.2021116.0",
+		"@markuplint/ml-core": "2.0.0-dev.2021116.0",
 		"mustache": "^4.2.0",
 		"prettier": "^2.4.1",
 		"tslib": "^2.3.1",
