--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -17,16 +17,16 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/i18n": "^2.0.0-dev.20211115.0",
-		"@markuplint/ml-ast": "^2.0.0-dev.20211115.0",
-		"@markuplint/ml-config": "^2.0.0-dev.2021116.0",
-		"@markuplint/ml-spec": "^2.0.0-dev.20211115.0",
+		"@markuplint/i18n": "2.0.0-dev.20211115.0",
+		"@markuplint/ml-ast": "2.0.0-dev.20211115.0",
+		"@markuplint/ml-config": "2.0.0-dev.2021116.0",
+		"@markuplint/ml-spec": "2.0.0-dev.20211115.0",
 		"debug": "^4.3.2",
 		"postcss-selector-parser": "^6.0.6",
 		"tslib": "^2.3.1"
 	},
 	"devDependencies": {
-		"@markuplint/html-parser": "^2.0.0-dev.20211115.0",
+		"@markuplint/html-parser": "2.0.0-dev.20211115.0",
 		"@types/debug": "^4.1.7"
 	}
 }
