--- a/packages/@markuplint/mustache-parser/package.json
+++ b/packages/@markuplint/mustache-parser/package.json
@@ -16,9 +16,9 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "^2.0.0-dev.20211115.0",
-		"@markuplint/ml-ast": "^2.0.0-dev.20211115.0",
-		"@markuplint/parser-utils": "^2.0.0-dev.20211115.0",
+		"@markuplint/html-parser": "2.0.0-dev.20211115.0",
+		"@markuplint/ml-ast": "2.0.0-dev.20211115.0",
+		"@markuplint/parser-utils": "2.0.0-dev.20211115.0",
 		"tslib": "^2.3.1"
 	}
 }
