--- a/packages/@markuplint/parser-utils/package.json
+++ b/packages/@markuplint/parser-utils/package.json
@@ -19,7 +19,7 @@
 		"@types/uuid": "^8.3.1"
 	},
 	"dependencies": {
-		"@markuplint/ml-ast": "^2.0.0-dev.20211115.0",
+		"@markuplint/ml-ast": "2.0.0-dev.20211115.0",
 		"tslib": "^2.3.1",
 		"uuid": "^8.3.2"
 	}
