--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -17,9 +17,9 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-spec": "^2.0.0-dev.20211115.1",
-		"@markuplint/ml-core": "^2.0.0-dev.2021116.0",
-		"@markuplint/ml-spec": "^2.0.0-dev.20211115.0",
+		"@markuplint/html-spec": "2.0.0-dev.20211115.1",
+		"@markuplint/ml-core": "2.0.0-dev.2021116.0",
+		"@markuplint/ml-spec": "2.0.0-dev.20211115.0",
 		"tslib": "^2.3.1"
 	}
 }
