--- a/packages/@markuplint/ejs-parser/package.json
+++ b/packages/@markuplint/ejs-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/ejs-parser",
-	"version": "2.0.0-dev.20211115.0",
+	"version": "2.0.0-dev.2021117.0",
 	"description": "EJS parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -16,8 +16,8 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "2.0.0-dev.20211115.0",
+		"@markuplint/html-parser": "^2.0.0-dev.2021117.0",
 		"@markuplint/ml-ast": "2.0.0-dev.20211115.0",
-		"@markuplint/parser-utils": "2.0.0-dev.20211115.0"
+		"@markuplint/parser-utils": "^2.0.0-dev.2021117.0"
 	}
 }
