--- a/packages/@markuplint/jsx-parser/package.json
+++ b/packages/@markuplint/jsx-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/jsx-parser",
-	"version": "1.0.0-dev.20211115.0",
+	"version": "1.0.0-dev.2021117.0",
 	"description": "JSX parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -16,9 +16,9 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "2.0.0-dev.20211115.0",
+		"@markuplint/html-parser": "^2.0.0-dev.2021117.0",
 		"@markuplint/ml-ast": "2.0.0-dev.20211115.0",
-		"@markuplint/parser-utils": "2.0.0-dev.20211115.0",
+		"@markuplint/parser-utils": "^2.0.0-dev.2021117.0",
 		"@typescript-eslint/types": "^5.3.1",
 		"@typescript-eslint/typescript-estree": "^5.3.1",
 		"tslib": "^2.3.1"
