--- a/packages/@markuplint/astro-parser/package.json
+++ b/packages/@markuplint/astro-parser/package.json
@@ -17,9 +17,9 @@
 	},
 	"dependencies": {
 		"@astrojs/parser": "^0.20.2",
-		"@markuplint/html-parser": "^2.0.0-dev.2021117.0",
+		"@markuplint/html-parser": "2.0.0-dev.2021117.0",
 		"@markuplint/ml-ast": "2.0.0-dev.20211115.0",
-		"@markuplint/parser-utils": "^2.0.0-dev.2021117.0",
+		"@markuplint/parser-utils": "2.0.0-dev.2021117.0",
 		"tslib": "^2.3.1"
 	}
 }
