--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -26,7 +26,7 @@
 		"tslib": "^2.3.1"
 	},
 	"devDependencies": {
-		"@markuplint/html-parser": "^2.0.0-dev.2021117.0",
+		"@markuplint/html-parser": "2.0.0-dev.2021117.0",
 		"@types/debug": "^4.1.7"
 	}
 }
