--- a/playground/package.json
+++ b/playground/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@markuplint/playground",
 	"description": "https://playground.markuplint.dev",
-	"version": "2.0.0-dev.2021117.1",
+	"version": "2.0.0-dev.2021117.2",
 	"private": true,
 	"scripts": {
 		"pg:dev": "webpack-dev-server --progress --watch --colors",
@@ -48,11 +48,11 @@
 		"@markuplint/html-spec": "^2.0.0-dev.2021117.0",
 		"@markuplint/i18n": "^2.0.0-dev.20211115.0",
 		"@markuplint/ml-ast": "^2.0.0-dev.20211115.0",
-		"@markuplint/ml-config": "^2.0.0-dev.2021116.0",
-		"@markuplint/ml-core": "2.0.0-dev.2021117.1",
+		"@markuplint/ml-config": "2.0.0-dev.2021116.1",
+		"@markuplint/ml-core": "2.0.0-dev.2021117.2",
 		"@markuplint/ml-spec": "^2.0.0-dev.20211115.0",
 		"@markuplint/parser-utils": "^2.0.0-dev.2021117.0",
-		"@markuplint/rules": "2.0.0-dev.2021117.1",
+		"@markuplint/rules": "2.0.0-dev.2021117.2",
 		"monaco-editor": "0.20.0",
 		"svelte": "3.24.1",
 		"tslib": "2.3.0"
