--- a/packages/@markuplint/ml-spec/package.json
+++ b/packages/@markuplint/ml-spec/package.json
@@ -15,14 +15,16 @@
 		"build": "tsc",
 		"dev": "tsc --build --watch",
 		"clean": "tsc --build --clean",
+		"schema:gen": "ts-node ./gen/gen.ts; prettier --write './schemas/*.json';",
 		"schema:structures": "json2ts ./schemas/permitted-structures.schema.json > ./src/permitted-structres.ts; prettier --write ./src/permitted-structres.ts; eslint --fix --config ../../../.eslintrc ./src/permitted-structres.ts",
-		"schema:attributes": "json2ts ./schemas/attributes.schema.json > ./src/attributes.ts; prettier --write ./src/attributes.ts; eslint --fix --config ../../../.eslintrc ./src/attributes.ts",
-		"schema": "yarn schema:structures; yarn schema:attributes;"
+		"schema:attributes": "json2ts ./schemas/attributes.schema.json --cwd ./schemas > ./src/attributes.ts; prettier --write ./src/attributes.ts; eslint --fix --config ../../../.eslintrc ./src/attributes.ts",
+		"schema": "yarn schema:gen; yarn schema:structures; yarn schema:attributes; tsc;"
 	},
 	"dependencies": {
 		"tslib": "^2.3.1"
 	},
 	"devDependencies": {
+		"@markuplint/types": "1.0.0-dev.2021117.0",
 		"json-schema-to-typescript": "^10.1.5"
 	}
 }
