--- a/website/.markuplintrc
+++ b/website/.markuplintrc
@@ -5,24 +5,26 @@
   "specs": ["@markuplint/react-spec"],
   "rules": {
     "attr-duplication": true,
-    "character-reference": true,
-    "deprecated-attr": true,
-    "deprecated-element": true,
-    "doctype": true,
-    "id-duplication": true,
-    "permitted-contents": true,
-    "required-attr": true,
-    "invalid-attr": true,
-    "landmark-roles": true,
-    "required-h1": true,
-    "class-naming": false,
     "attr-equal-space-after": true,
     "attr-equal-space-before": true,
     "attr-spacing": true,
     "attr-value-quotes": true,
     "case-sensitive-attr-name": true,
     "case-sensitive-tag-name": true,
+    "character-reference": true,
+    "class-naming": false,
+    "deprecated-attr": true,
+    "deprecated-element": true,
+    "doctype": true,
+    "id-duplication": true,
     "indentation": false,
+    "ineffective-attr": true,
+    "invalid-attr": true,
+    "landmark-roles": true,
+    "no-boolean-attr-value": true,
+    "permitted-contents": true,
+    "required-attr": true,
+    "required-h1": true,
     "wai-aria": true
   },
   "nodeRules": [
