--- a/website/.markuplintrc
+++ b/website/.markuplintrc
@@ -35,14 +35,15 @@
           "option": {
             "attrs": {
               "property": {
-                "type": "String"
+                "type": "Any"
               },
               "content": {
-                "type": "String"
+                "type": "Any"
               }
             }
           }
-        }
+        },
+        "required-attr": false
       }
     },
     {
