--- a/playground/package.json
+++ b/playground/package.json
@@ -4,44 +4,43 @@
 	"version": "2.0.0-dev.20211213.2",
 	"private": true,
 	"scripts": {
-		"pg:dev": "webpack-dev-server --progress --watch --colors",
+		"pg:dev": "webpack-dev-server --progress",
 		"pg:build": "webpack --mode production"
 	},
 	"author": "Yusuke Hirao",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/mini-css-extract-plugin": "0.9.1",
-		"@types/script-ext-html-webpack-plugin": "2.1.1",
-		"@types/webpack-dev-server": "3.11.0",
-		"autoprefixer": "9.8.6",
-		"babel-loader": "8.1.0",
-		"css-loader": "4.2.1",
-		"cssnano": "4.1.10",
-		"fiber": "1.0.4",
-		"file-loader": "6.0.0",
-		"html-inline-css-webpack-plugin": "1.8.1",
-		"html-loader": "1.1.0",
-		"html-webpack-plugin": "4.3.0",
+		"@types/mini-css-extract-plugin": "2.4.0",
+		"@types/script-ext-html-webpack-plugin": "2.1.3",
+		"@types/webpack-dev-server": "4.5.0",
+		"autoprefixer": "10.4.0",
+		"babel-loader": "8.2.3",
+		"css-loader": "6.5.1",
+		"cssnano": "5.0.12",
+		"file-loader": "6.2.0",
+		"html-inline-css-webpack-plugin": "1.11.1",
+		"html-loader": "3.0.1",
+		"html-webpack-plugin": "5.5.0",
 		"json-loader": "0.5.7",
-		"mini-css-extract-plugin": "0.10.0",
-		"monaco-editor-webpack-plugin": "1.9.0",
+		"mini-css-extract-plugin": "2.4.5",
+		"monaco-editor-webpack-plugin": "7.0.0",
 		"postcss-base64": "0.7.1",
-		"postcss-calc": "7.0.3",
-		"postcss-custom-media": "7.0.8",
-		"postcss-gap-properties": "2.0.0",
-		"postcss-loader": "3.0.0",
+		"postcss-calc": "8.0.0",
+		"postcss-custom-media": "8.0.0",
+		"postcss-gap-properties": "3.0.0",
+		"postcss-loader": "6.2.1",
 		"postcss-math": "0.0.10",
-		"sass": "1.26.10",
-		"sass-loader": "9.0.3",
-		"script-ext-html-webpack-plugin": "2.1.4",
-		"style-loader": "1.2.1",
-		"svelte-loader": "2.13.6",
-		"svelte-preprocess": "4.0.12",
-		"ts-loader": "8.0.2",
+		"sass": "1.45.0",
+		"sass-loader": "12.4.0",
+		"script-ext-html-webpack-plugin": "2.1.5",
+		"style-loader": "3.3.1",
+		"svelte-loader": "3.1.2",
+		"svelte-preprocess": "4.9.8",
+		"ts-loader": "9.2.6",
 		"ttf-loader": "1.0.2",
-		"webpack": "4.44.1",
-		"webpack-cli": "3.3.12",
-		"webpack-dev-server": "3.11.0"
+		"webpack": "5.65.0",
+		"webpack-cli": "4.9.1",
+		"webpack-dev-server": "4.6.0"
 	},
 	"dependencies": {
 		"@markuplint/html-parser": "2.0.0-dev.20211213.2",
@@ -53,8 +52,8 @@
 		"@markuplint/ml-spec": "2.0.0-dev.20211213.2",
 		"@markuplint/parser-utils": "2.0.0-dev.20211213.2",
 		"@markuplint/rules": "2.0.0-dev.20211213.2",
-		"monaco-editor": "0.20.0",
-		"svelte": "3.24.1",
-		"tslib": "2.3.0"
+		"monaco-editor": "0.31.0",
+		"svelte": "3.44.2",
+		"tslib": "2.3.1"
 	}
 }
