--- a/packages/@markuplint/create-rule-helper/package.json
+++ b/packages/@markuplint/create-rule-helper/package.json
@@ -18,6 +18,7 @@
 	},
 	"dependencies": {
 		"@markuplint/ml-core": "2.0.0-dev.20211227.0",
+		"glob": "^7.2.0",
 		"mustache": "^4.2.0",
 		"prettier": "^2.4.1",
 		"tslib": "^2.3.1",
