--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"pg:build": "cd playground; yarn pg:build",
 		"apidoc": "typedoc --ignoreCompilerErrors --exclude '**/*+(index|.spec|.e2e|.d).ts,node_modules/**/*' --mode file --out apidoc --media packages/markuplint/media --readme ./packages/markuplint/README.md ./packages/markuplint/",
 		"release": "lerna publish",
+		"release:next": "lerna publish --dist-tag next --exact --preid dev.${t}",
 		"prerelease": "yarn build; yarn test",
 		"prepare": "husky install"
 	},
