--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"apidoc": "typedoc --ignoreCompilerErrors --exclude '**/*+(index|.spec|.e2e|.d).ts,node_modules/**/*' --mode file --out apidoc --media packages/markuplint/media --readme ./packages/markuplint/README.md ./packages/markuplint/",
 		"release": "lerna publish",
 		"release:next": "lerna publish --dist-tag next --exact --preid dev.${t}",
+		"release:next:increment": "lerna publish --dist-tag next --exact",
 		"prerelease": "yarn build; yarn test",
 		"prepare": "husky install"
 	},
