--- a/playground/.markuplintrc
+++ b/playground/.markuplintrc
@@ -1,46 +1,3 @@
 {
-	"rules": {
-		"attr-duplication": true,
-		"attr-equal-space-after": true,
-		"attr-equal-space-before": true,
-		"attr-spacing": true,
-		"attr-value-quotes": true,
-		"case-sensitive-attr-name": true,
-		"case-sensitive-tag-name": true,
-		"character-reference": true,
-		"class-naming": "/[a-z]+/",
-		"deprecated-attr": true,
-		"deprecated-element": true,
-		"doctype": true,
-		"id-duplication": true,
-		"indentation": false,
-		"ineffective-attr": true,
-		"invalid-attr": true,
-		"landmark-roles": true,
-		"no-boolean-attr-value": true,
-		"permitted-contents": true,
-		"required-attr": true,
-		"required-h1": true,
-		"wai-aria": true
-	},
-	"nodeRules": [
-		{
-			"tagName": "meta",
-			"rules": {
-				"invalid-attr": {
-					"option": {
-						"attrs": {
-							"property": {
-								"type": "Any"
-							},
-							"content": {
-								"type": "Any"
-							}
-						}
-					}
-				},
-				"required-attr": false
-			}
-		}
-	]
+	"extends": ["markuplint:recommended"]
 }
