--- a/packages/@markuplint/astro-parser/package.json
+++ b/packages/@markuplint/astro-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/astro-parser",
-	"version": "2.0.0-dev.20220112.0",
+	"version": "2.0.0-rc.1",
 	"description": "astro parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -17,9 +17,9 @@
 	},
 	"dependencies": {
 		"@astrojs/parser": "^0.20.2",
-		"@markuplint/html-parser": "2.0.0-dev.20220112.0",
-		"@markuplint/ml-ast": "2.0.0-dev.20220112.0",
-		"@markuplint/parser-utils": "2.0.0-dev.20220112.0",
+		"@markuplint/html-parser": "2.0.0-rc.1",
+		"@markuplint/ml-ast": "2.0.0-rc.1",
+		"@markuplint/parser-utils": "2.0.0-rc.1",
 		"tslib": "^2.3.1"
 	}
 }
