--- a/packages/@markuplint/vue-spec/package.json
+++ b/packages/@markuplint/vue-spec/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/vue-spec",
-	"version": "2.0.0-dev.20220112.0",
+	"version": "2.0.0-rc.1",
 	"description": "Extended specification for tags and attributes in Vue",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -16,6 +16,6 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/ml-spec": "2.0.0-dev.20220112.0"
+		"@markuplint/ml-spec": "2.0.0-rc.1"
 	}
 }
