Fix to overwrite to the rule of the config even if it is false.

--- a/packages/@markuplint/file-resolver/test/fixtures/003/.markuplintrc
+++ b/packages/@markuplint/file-resolver/test/fixtures/003/.markuplintrc
@@ -17,6 +17,7 @@
 				"OPTIONAL_PROP": "CHANGED_OPTIONAL_VALUE"
 			}
 		},
+		"rule__custom-setting2": false,
 		"additional_rule": {
 			"value": "VALUE"
 		}
