--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,12 +4,12 @@ on:
     push:
         branches:
             - main
-            - v2
+            - dev
             - next
     pull_request:
         branches:
             - main
-            - v2
+            - dev
             - next
 
 jobs:
