--- a/.prettierrc
+++ b/.prettierrc
@@ -8,6 +8,13 @@
 	"arrowParens": "avoid",
 	"overrides": [
 		{
+			"files": "*.md",
+			"options": {
+				"tabWidth": 2,
+				"useTabs": false
+			}
+		},
+		{
 			"files": ["**/.textlintrc", "**/.markuplintrc", "**/.eslintrc"],
 			"options": {
 				"parser": "json"
