--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/ml-core",
-	"version": "2.0.0-rc.6",
+	"version": "2.0.0",
 	"description": "The core module of markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -17,17 +17,17 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/i18n": "2.0.0-rc.5",
-		"@markuplint/ml-ast": "2.0.0-rc.6",
-		"@markuplint/ml-config": "2.0.0-rc.5",
-		"@markuplint/ml-spec": "2.0.0-rc.6",
-		"@markuplint/parser-utils": "2.0.0-rc.6",
+		"@markuplint/i18n": "2.0.0",
+		"@markuplint/ml-ast": "2.0.0",
+		"@markuplint/ml-config": "2.0.0",
+		"@markuplint/ml-spec": "2.0.0",
+		"@markuplint/parser-utils": "2.0.0",
 		"debug": "^4.3.3",
 		"postcss-selector-parser": "^6.0.9",
 		"tslib": "^2.3.1"
 	},
 	"devDependencies": {
-		"@markuplint/html-parser": "2.0.0-rc.6",
+		"@markuplint/html-parser": "2.0.0",
 		"@types/debug": "^4.1.7"
 	}
 }
