--- a/packages/@markuplint/nunjucks-parser/package.json
+++ b/packages/@markuplint/nunjucks-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/nunjucks-parser",
-	"version": "2.0.0-rc.6",
+	"version": "2.0.0",
 	"description": "Nunjucks template parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -16,8 +16,8 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "2.0.0-rc.6",
-		"@markuplint/ml-ast": "2.0.0-rc.6",
-		"@markuplint/parser-utils": "2.0.0-rc.6"
+		"@markuplint/html-parser": "2.0.0",
+		"@markuplint/ml-ast": "2.0.0",
+		"@markuplint/parser-utils": "2.0.0"
 	}
 }
