Add the `require-accessible-name` rule.

--- a/test/fixture/.markuplintrc
+++ b/test/fixture/.markuplintrc
@@ -20,6 +20,7 @@
 		"landmark-roles": true,
 		"no-boolean-attr-value": true,
 		"permitted-contents": true,
+		"require-accessible-name": true,
 		"required-attr": true,
 		"required-h1": true,
 		"wai-aria": true
