--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/rules",
-	"version": "2.1.1",
+	"version": "2.2.0",
 	"description": "Rules for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -17,8 +17,8 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-spec": "^2.1.0",
-		"@markuplint/ml-core": "2.0.0",
+		"@markuplint/html-spec": "^2.2.0",
+		"@markuplint/ml-core": "^2.1.0",
 		"@markuplint/ml-spec": "2.0.0",
 		"@markuplint/types": "2.0.0",
 		"debug": "^4.3.3",
