--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/ml-core",
-	"version": "2.1.0",
+	"version": "2.1.1-dev.20220307.0",
 	"description": "The core module of markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
