--- a/packages/@markuplint/ml-ast/package.json
+++ b/packages/@markuplint/ml-ast/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/ml-ast",
-	"version": "2.0.0",
+	"version": "2.0.1-dev.20220307.0",
 	"description": "The markuplint AST types.",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
