--- a/packages/@markuplint/html-spec/package.json
+++ b/packages/@markuplint/html-spec/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/html-spec",
-	"version": "2.2.1-dev.20220307.1",
+	"version": "2.3.0",
 	"description": "A specification of HTML Living Standard for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
