--- a/packages/@markuplint/file-resolver/package.json
+++ b/packages/@markuplint/file-resolver/package.json
@@ -27,6 +27,7 @@
 		"@markuplint/ml-spec": "2.0.1-dev.20220307.0",
 		"cosmiconfig": "^7.0.1",
 		"glob": "^7.2.0",
+		"jsonc": "^2.0.0",
 		"minimatch": "^5.0.1",
 		"tslib": "^2.3.1"
 	}
