Supports JSON with Comment format

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
 		}
 	],
 	"files.associations": {
-		".markuplintrc": "json",
+		".markuplintrc": "jsonc",
 		"*.schema.json": "jsonc"
 	},
 	"json.schemas": [
