--- a/packages/@markuplint/file-resolver/package.json
+++ b/packages/@markuplint/file-resolver/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/file-resolver",
-	"version": "2.2.0",
+	"version": "2.3.0",
 	"description": "The file resolver of markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -23,8 +23,8 @@
 	"dependencies": {
 		"@markuplint/ml-ast": "2.0.1-dev.20220307.0",
 		"@markuplint/ml-config": "2.0.1-dev.20220307.0",
-		"@markuplint/ml-core": "2.1.1-dev.20220307.1",
-		"@markuplint/ml-spec": "2.0.1-dev.20220307.0",
+		"@markuplint/ml-core": "^2.1.1",
+		"@markuplint/ml-spec": "^2.0.1",
 		"cosmiconfig": "^7.0.1",
 		"glob": "^7.2.0",
 		"jsonc": "^2.0.0",
