--- a/packages/@markuplint/react-spec/package.json
+++ b/packages/@markuplint/react-spec/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/react-spec",
-	"version": "2.0.1-dev.20220307.0",
+	"version": "2.0.1",
 	"description": "Extended specification for tags and attributes in React",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -16,6 +16,6 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/ml-spec": "2.0.1-dev.20220307.0"
+		"@markuplint/ml-spec": "^2.0.1"
 	}
 }
