--- a/website/.eslintrc
+++ b/website/.eslintrc
@@ -15,7 +15,8 @@
     }
   },
   "rules": {
-    "react/display-name": 0
+    "react/display-name": 0,
+    "react/prop-types": 0
   },
   "globals": {
     "React": true
