--- a/website/package.json
+++ b/website/package.json
@@ -11,33 +11,35 @@
   "author": "Yusuke Hirao",
   "license": "MIT",
   "devDependencies": {
-    "@types/mdx-js__react": "^1.5.4",
-    "@types/node": "^16.3.2",
-    "@types/react": "^17.0.14",
+    "@types/mdx-js__react": "^1.5.5",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
     "@zeit/next-css": "^1.0.1",
-    "autoprefixer": "^10.3.1",
-    "cssnano": "^5.0.6",
-    "eslint-config-next": "^11.0.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "postcss": "^8.3.5",
+    "autoprefixer": "^10.4.4",
+    "cssnano": "^5.1.7",
+    "eslint-config-next": "^12.1.4",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "postcss": "^8.4.12",
     "postcss-base64": "^0.7.1",
-    "postcss-calc": "^8.0.0",
+    "postcss-calc": "^8.2.4",
     "postcss-custom-media": "^8.0.0",
-    "postcss-gap-properties": "^2.0.0",
-    "postcss-loader": "^6.1.1",
+    "postcss-gap-properties": "^3.0.3",
+    "postcss-loader": "^6.2.1",
     "postcss-math": "^0.0.10",
     "text-loader": "^0.0.1",
     "url-loader": "^4.1.1"
   },
   "dependencies": {
-    "@mapbox/rehype-prism": "^0.7.0",
+    "@mapbox/rehype-prism": "^0.8.0",
     "@markuplint/rules": "^2.2.3",
-    "next": "11.0.1",
-    "next-mdx-enhanced": "^5.0.0",
+    "next": "^12.1.4",
+    "next-mdx-remote": "^4.0.2",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-innertext": "^1.1.5"
+    "react-innertext": "^1.1.5",
+    "remark-comment": "^1.0.0",
+    "utility-types": "^3.10.0"
   }
 }
