--- a/package.json
+++ b/package.json
@@ -90,25 +90,26 @@
 		"playground"
 	],
 	"devDependencies": {
-		"@types/jest": "^27.4.0",
-		"@typescript-eslint/eslint-plugin": "^5.11.0",
-		"@typescript-eslint/parser": "^5.11.0",
+		"@types/jest": "^27.4.1",
+		"@typescript-eslint/eslint-plugin": "^5.18.0",
+		"@typescript-eslint/parser": "^5.18.0",
 		"browser-resolve": "^2.0.0",
 		"coveralls": "^3.1.1",
-		"eslint": "^8.8.0",
+		"eslint": "^8.12.0",
+		"eslint-import-resolver-typescript": "^2.7.1",
 		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-import": "^2.25.4",
-		"eslint-plugin-jsdoc": "^37.8.2",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsdoc": "^39.0.0",
 		"eslint-plugin-node": "^11.1.0",
 		"heapdump": "^0.3.15",
 		"husky": "^7.0.4",
 		"jest": "^27.5.1",
 		"lerna": "^4.0.0",
-		"lint-staged": "^12.3.3",
-		"prettier": "^2.5.1",
-		"ts-jest": "^27.1.3",
-		"ts-node": "^10.5.0",
-		"typedoc": "^0.22.11",
-		"typescript": "^4.5.5"
+		"lint-staged": "^12.3.7",
+		"prettier": "^2.6.2",
+		"ts-jest": "^27.1.4",
+		"ts-node": "^10.7.0",
+		"typedoc": "^0.22.14",
+		"typescript": "^4.6.3"
 	}
 }
