Remove deprecated rules.

--- a/packages/markuplint/.markuplintrc
+++ b/packages/markuplint/.markuplintrc
@@ -12,12 +12,8 @@
 		"landmark-roles": true,
 		"required-h1": true,
 		"class-naming": false,
-		"attr-equal-space-after": false,
-		"attr-equal-space-before": false,
-		"attr-spacing": false,
 		"attr-value-quotes": false,
 		"case-sensitive-attr-name": true,
-		"case-sensitive-tag-name": true,
-		"indentation": false
+		"case-sensitive-tag-name": true
 	}
 }
