--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,9 @@
 	"files.associations": {
 		".markuplintrc": "jsonc",
 		"*.schema.json": "jsonc",
-		"preset.*.json": "jsonc"
+		"preset.*.json": "jsonc",
+		"spec.*.json": "jsonc",
+		"spec-common.*.json": "jsonc"
 	},
 	"json.schemas": [
 		{
@@ -31,20 +33,12 @@
 			"url": "https://raw.githubusercontent.com/markuplint/markuplint/main/config.schema.json"
 		},
 		{
-			"fileMatch": ["/packages/*markuplint/html-spec/src/permitted-structures/*.json"],
-			"url": "/packages/@markuplint/ml-spec/schemas/permitted-structures.schema.json"
+			"fileMatch": ["/packages/*markuplint/html-spec/src/spec.*.json"],
+			"url": "/packages/@markuplint/ml-spec/schemas/element.schema.json"
 		},
 		{
-			"fileMatch": ["/packages/*markuplint/html-spec/src/attributes/*.json"],
-			"url": "/packages/@markuplint/ml-spec/schemas/attributes.schema.json"
-		},
-		{
-			"fileMatch": ["/packages/*markuplint/html-spec/src/global-attributes/*.json"],
+			"fileMatch": ["/packages/*markuplint/html-spec/src/spec-common.attributes.json"],
 			"url": "/packages/@markuplint/ml-spec/schemas/global-attributes.schema.json"
-		},
-		{
-			"fileMatch": ["/packages/*markuplint/html-spec/src/wai-aria/*.json"],
-			"url": "/packages/@markuplint/ml-spec/schemas/wai-aria.schema.json"
 		},
 		{
 			"fileMatch": ["/packages/*markuplint/i18n/locales/*.json"],
