--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
 		"jest": "^27.5.1",
 		"lerna": "^4.0.0",
 		"lint-staged": "^12.3.7",
+		"npm-run-all": "^4.1.5",
 		"prettier": "^2.6.2",
 		"ts-jest": "^27.1.4",
 		"ts-node": "^10.7.0",
