Add ARIA pseudo-class through Extended Selector

--- a/packages/@markuplint/selector/tsconfig.json
+++ b/packages/@markuplint/selector/tsconfig.json
@@ -9,7 +9,14 @@
 			"*": ["../../../node_modules"]
 		}
 	},
-	"references": [],
+	"references": [
+		{
+			"path": "../html-spec"
+		},
+		{
+			"path": "../ml-spec"
+		}
+	],
 	"include": ["./src/**/*"],
 	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"]
 }
