--- a/packages/@markuplint/jsx-parser/package.json
+++ b/packages/@markuplint/jsx-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/jsx-parser",
-	"version": "2.4.1",
+	"version": "3.0.0-alpha.0",
 	"description": "JSX parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -16,9 +16,9 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "2.2.1",
-		"@markuplint/ml-ast": "2.0.1-dev.20220307.0",
-		"@markuplint/parser-utils": "2.2.0",
+		"@markuplint/html-parser": "3.0.0-alpha.0",
+		"@markuplint/ml-ast": "3.0.0-alpha.0",
+		"@markuplint/parser-utils": "3.0.0-alpha.0",
 		"@typescript-eslint/types": "^5.18.0",
 		"@typescript-eslint/typescript-estree": "^5.18.0",
 		"tslib": "^2.3.1"
