--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/ml-core",
-	"version": "2.3.2",
+	"version": "3.0.0-alpha.0",
 	"description": "The core module of markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -17,19 +17,19 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/config-presets": "3.0.0-alpha",
-		"@markuplint/i18n": "2.1.1",
-		"@markuplint/ml-ast": "2.0.1-dev.20220307.0",
-		"@markuplint/ml-config": "2.1.0",
-		"@markuplint/ml-spec": "2.1.0",
-		"@markuplint/parser-utils": "2.2.0",
-		"@markuplint/selector": "3.0.0-alpha",
+		"@markuplint/config-presets": "3.0.0-alpha.0",
+		"@markuplint/i18n": "3.0.0-alpha.0",
+		"@markuplint/ml-ast": "3.0.0-alpha.0",
+		"@markuplint/ml-config": "3.0.0-alpha.0",
+		"@markuplint/ml-spec": "3.0.0-alpha.0",
+		"@markuplint/parser-utils": "3.0.0-alpha.0",
+		"@markuplint/selector": "3.0.0-alpha.0",
 		"debug": "^4.3.4",
 		"postcss-selector-parser": "^6.0.10",
 		"tslib": "^2.3.1"
 	},
 	"devDependencies": {
-		"@markuplint/html-parser": "2.2.1",
+		"@markuplint/html-parser": "3.0.0-alpha.0",
 		"@types/debug": "^4.1.7"
 	}
 }
